...
                                                        equipment: detailResponse.equipment?.model, location: detailResponse.location?.name)
                                context.insert(favorite)
                                isFavorite = true
                                showFavoriteAlert.toggle()
                            }
                        }
                        .accessibilityIdentifier("FavoriteButton")
                }
            }
            .padding()
            .onAppear(perform: {
                viewModel.getImageDetail(photoId: photoId)
                isFavorite = context.checkIfIsFavorite(favId: photoId)
...
